--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <script src="main.js"></script>
-<h1>hello github!</h1>
-<p>bla bla bla</p>
+<h1>#MoneyPiles</h1>
+<p>Spencer's Super Sweet Planet Making Site</p>
 </body>
 </html>
