--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body onload="testCookie()">
 <script src="main.js"></script>
 <h1>#MoneyPiles</h1>
 <p>Spencer's Super Sweet Planet Making Site</p>
