--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body onload="testCookie()">
 <script src="main.js"></script>
-<h1>#MoneyPiles</h1>
-<p>Spencer's Super Sweet Planet Making Site</p>
+<h1 display ="center">Is it nova yet?</h1>
+<p display ="center">Track alpha ori going nova!</p>
 </body>
 </html>
