--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body onload="testCookie()">
+<link rel="stylesheet" href="style.css">
 <script src="main.js"></script>
-<h1 display ="center">Is it nova yet?</h1>
-<p display ="center">Track alpha ori going nova!</p>
+<div>
+    <h1 class="title">Is it nova yet?</h1>
+</div>
+<p class="subtext">Track alpha ori going nova!</p>
 </body>
 </html>
