--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body onload="testCookie()">
-<link rel="stylesheet" href="style.css">
-<script src="main.js"></script>
-<div>
-    <h1 class="title">Is it nova yet?</h1>
-</div>
-<p class="subtext">Track alpha ori going nova!</p>
+    <link rel="stylesheet" href="Style/style.css">
+    <script src="Javascript/main.js"></script>
+    <script src="Javascript/calc.js"></script>
+    <div>
+        <h1 class="title">Is it nova yet?</h1>
+    </div>
+    <p class="subtext">Track alpha ori going nova!</p>
 </body>
 </html>
