morg calc own page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <body onload="testCookie()">
     <link rel="stylesheet" href="Style/style.css">
     <script src="Javascript/main.js"></script>
-    <script src="Javascript/calc.js"></script>
     <div>
         <h1 class="title">Is it nova yet?</h1>
     </div>
     <p class="subtext">Track alpha ori going nova!</p>
+    <a href="Calculator\calc.html"> Morg Calc</a>
 </body>
 </html>
