--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -20,6 +20,6 @@
 	<div class = "inputHolder"><label>Value increase percent:</label><input class="valueIncrease" type ="text" value="0"></input></div>
 	<div class = "inputHolder"><label>Inflation percent:</label><input class="inflation" type ="text"value="0"></input></div>
 	<div class = "inputHolder"><label>Logging:</label><input class="logging" type ="checkbox"></input></div>
-	<button onclick = "main()">Re-Calc Mortgage</button>
+	<button onclick = "Main()">Calculate Mortgage</button>
 </body>
 </html>
