--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <link rel="stylesheet" href="Style/style.css">
-    <script src="Javascript/calc.js"></script>
+    <link rel="stylesheet" href="../Style/style.css">
+    <script src="../Javascript/calc.js"></script>
     <div>
         <h1 class="title">Mortgage Calculator</h1>
     </div>
     <p class="subtext">Sadly not a supernova calculator</p>
+	
+	<div class = "inputHolder"><label>Advanced Options<img src="../imgs/vv.gif"></img></label><input class="advOptions" type ="checkbox" onclick = "AdvOptionsToggle()" ></input></div>
 	<div class = "inputHolder"><label>Total loan amount:</label><input class="loanAmount" type ="text" value="0"></input></div>
 	<div class = "inputHolder"><label>Principal balance:</label><input class="principal" type ="text" value="0"></input></div>
 	<div class = "inputHolder"><label>Annual interest rate:</label><input class="interestRate" type ="text" value="0"></input></div>
 	<div class = "inputHolder"><label>Monthly payment:</label><input class="payment" type ="text" value="0"></input></div>
 	<div class = "inputHolder"><label>Minimum Payment:</label><input class="minimumPayment" type ="text" value="0"></input></div>
-	<div class = "inputHolder"><label>constPrinPayment:</label><input class="constPrinPayment" type ="text" value="0"></input></div>
-	<div class = "inputHolder"><label>maxRatio:</label><input class="maxRatio" type ="text" value="0"></input></div>
-	<div class = "inputHolder"><label>maxRatioWithPmi:</label><input class="maxRatioWithPmi" type ="text" value="0"></input></div>
+	<div class = "inputHolder advancedInput hide"><label>constPrinPayment:</label><input class="constPrinPayment" type ="text" value="0"></input></div>
+	<div class = "inputHolder advancedInput hide"><label>maxRatio:</label><input class="maxRatio" type ="text" value="0"></input></div>
+	<div class = "inputHolder advancedInput hide"><label>maxRatioWithPmi:</label><input class="maxRatioWithPmi" type ="text" value="0"></input></div>
 	<div class = "inputHolder"><label>Monthly PMI:</label><input class="pmi" type ="text" value="0"></input></div>
 	<div class = "inputHolder"><label>Monthly taxes:</label><input class="taxes" type ="text" value="0"></input></div>
-	<div class = "inputHolder"><label>Value increase percent:</label><input class="valueIncrease" type ="text" value="0"></input></div>
-	<div class = "inputHolder"><label>Inflation percent:</label><input class="inflation" type ="text"value="0"></input></div>
-	<div class = "inputHolder"><label>Logging:</label><input class="logging" type ="checkbox"></input></div>
+	<div class = "inputHolder advancedInput hide"><label>Value increase percent:</label><input class="valueIncrease" type ="text" value="0"></input></div>
+	<div class = "inputHolder advancedInput hide"><label>Inflation percent:</label><input class="inflation" type ="text"value="0"></input></div>
+	<div class = "inputHolder advancedInput hide"><label>Logging:</label><input class="logging" type ="checkbox"></input></div>
 	<button onclick = "Main()">Calculate Mortgage</button>
 </body>
 </html>
