--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body onload="InitialValues()">
     <link rel="stylesheet" href="../Style/style.css">
     <script src="../Javascript/calc.js"></script>
     <div>
