--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -21,6 +21,6 @@
 	<div class = "inputHolder advancedInput hide"><label>Value increase percent:</label><input class="valueIncrease" type ="text" value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Inflation percent:</label><input class="inflation" type ="text"value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Logging:</label><input class="logging" type ="checkbox"></div>
-	<button onclick = "Main()">Calculate Mortgage</button>
+	<button onclick = "ReCalc()">Calculate Mortgage</button>
 </body>
 </html>
