display morg results

--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -22,5 +22,6 @@
 	<div class = "inputHolder advancedInput hide"><label>Inflation percent:</label><input class="inflation" type ="text"value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Logging:</label><input class="logging" type ="checkbox"></div>
 	<button onclick = "ReCalc()">Calculate Mortgage</button>
+    <div class="mortgageStats"></div>
 </body>
 </html>
