--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h1 class="title">Is it nova yet?</h1>
     </div>
     <p class="subtext">Track alpha ori going nova!</p>
-    <a href="Calculator\Calc.html"> Mortgage Calculator</a>
+    <a href="Calculator\Calc"> Mortgage Calculator</a>
 </body>
 </html>
