--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body onload="testCookie()">
     <link rel="stylesheet" href="Style/style.css">
     <script src="Javascript/main.js"></script>
+    <script src="chartJs/Chart.bundle.min.js"></script>
     <div>
         <h1 class="title">Is it nova yet?</h1>
     </div>
