--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <body onload="testCookie()">
     <link rel="stylesheet" href="Style/style.css">
     <script src="Javascript/main.js"></script>
+    <script src="chartJs/Chart.bundle.min.js"></script>
     <div>
         <h1 class="title">Is it nova yet?</h1>
     </div>
     <p class="subtext">Track alpha ori going nova!</p>
     <a href="Calculator\Calc"> Mortgage Calculator</a>
+    <canvas id="canvas" class="chartjs-render-monitor"></canvas>
 </body>
 </html>
