--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body onload="testCookie()">
+<body onload="OnLoad()">
     <link rel="stylesheet" href="Style/style.css">
-    <script src="Javascript/main.js"></script>
     <script src="chartJs/Chart.bundle.min.js"></script>
+    <script src="Javascript/chart.js"></script>
+    <script src="Javascript/main.js"></script>
     <div>
         <h1 class="title">Is it nova yet?</h1>
     </div>
     <p class="subtext">Track alpha ori going nova!</p>
     <a href="Calculator\Calc"> Mortgage Calculator</a>
-    <canvas id="canvas" class="chartjs-render-monitor"></canvas>
+    <div id="chartHolder">
+        <canvas id="chart" class="chartjs-render-monitor"></canvas>
+    </div>
 </body>
 </html>
