--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <body onload="OnLoad()">
     <link rel="stylesheet" href="Style/style.css">
     <script src="chartJs/Chart.bundle.min.js"></script>
+    <script src="Javascript/calc.js"></script>
     <script src="Javascript/chart.js"></script>
     <script src="Javascript/main.js"></script>
     <div>
         <h1 class="title">Is it nova yet?</h1>
     </div>
     <p class="subtext">Track alpha ori going nova!</p>
-    <a href="Calculator\Calc"> Mortgage Calculator</a>
     <div id="chartHolder">
         <canvas id="chart" class="chartjs-render-monitor"></canvas>
+        <div><label>Start Date:</label><input class="chartStartDate" type="text" onclick="WatchMe()"/><button onclick="RefreshChart()">Refresh</button></div>
+    </div>
+    <div class="footer">
+        <a href="Calculator\Calc"> Mortgage Calculator</a>
     </div>
 </body>
 </html>
