about and default date

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <p class="subtext">Track alpha ori going nova!</p>
     <div id="chartHolder">
         <canvas id="chart" class="chartjs-render-monitor"></canvas>
-        <div><label>Start Date:</label><input class="chartStartDate" type="text" onclick="WatchMe()"/><button onclick="RefreshChart()">Refresh</button></div>
+        <div><label>Start Date:</label><input class="chartStartDate" type="text" onclick="WatchMe();" value="01-01-2019"/><button onclick="RefreshChart()">Refresh</button></div>
     </div>
+    <div class="about"><p>About:\nSome stars are variable stars which means that their brightness changes over time. Betelgeuse also know as Alpha Orionis or Alpha Ori is one of those stars. Currently its is the dimmest on record which could imply an impending supernova as the star compresses in the final months before its total collapse. Or it could just be a large dust cloud it ejected obscuring it from our view. We should know in a few weeks or months which is the case. This graph will keep you updated! Feel free to adjust the start data to view the past two years of data.</p></div>
     <div class="footer">
         <a href="Calculator\Calc"> Mortgage Calculator</a>
     </div>
