--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="about">
         <div>
-            <p>Some stars are variable stars which means that their brightness changes over time. Betelgeuse also know as Alpha Orionis or Alpha Ori is one of those stars. Currently its is the dimmest on record which could imply an impending supernova as the star compresses in the final months before its total collapse. Or it could just be a large dust cloud it ejected obscuring it from our view. We should know in a few weeks or months which is the case. This graph will keep you updated! Feel free to adjust the start data to view the past two years of data.</p>
+            <p>Some stars are variable stars which means that their brightness changes over time. Betelgeuse also known as Alpha Orionis or Alpha Ori is one of those stars. Currently it is the dimmest on record which could imply an impending supernova as the star compresses in the final months before its total collapse. Or it could just be a large dust cloud it ejected obscuring it from our view. We should know in a few weeks or months which is the case. This graph will keep you updated! Feel free to adjust the start data to view the past two years of data.</p>
             </div>
     </div>
     <div class="footer">
