--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <script src="Javascript/calc.js"></script>
     <script src="Javascript/chart.js"></script>
     <script src="Javascript/main.js"></script>
-    <div>
-        <h1 class="title">Is it nova yet?</h1>
+    <div class="title">
+        <h1>Betelgeuse Luminosity Tracker</h1>
     </div>
-    <p class="subtext">Track alpha ori going nova!</p>
     <div id="chartHolder">
         <canvas id="chart" class="chartjs-render-monitor"></canvas>
         <div><label>Start Date:</label><input class="chartStartDate" type="text" onclick="WatchMe();" value="01-01-2019"/><button onclick="RefreshChart()">Refresh</button></div>
@@ -20,7 +19,7 @@
             </div>
     </div>
     <div class="footer">
-        <a href="Calculator\Calc"> Mortgage Calculator</a>
+        <a class="hide" href="Calculator\Calc"> Mortgage Calculator</a>
     </div>
 </body>
 </html>
