--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="Javascript/chart.js"></script>
     <script src="Javascript/main.js"></script>
     <div class="title">
-        <h1>Betelgeuse Luminosity Tracker</h1>
+        <h1>Betelgeuse Brightness Tracker</h1>
     </div>
     <div id="chartHolder">
         <canvas id="chart" class="chartjs-render-monitor"></canvas>
