--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
     </div>
     <div class="footer">
-        <a class="hide" href="Calculator\Calc"> Mortgage Calculator</a>
+        <a href="Calculator\Calc"> Mortgage Calculator</a>
     </div>
 </body>
 </html>
