appreciation var change

--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -18,8 +18,8 @@
 	<div class = "inputHolder advancedInput hide"><label>maxRatioWithPmi:</label><input class="maxRatioWithPmi" type ="text" value="0"></div>
 	<div class = "inputHolder"><label>Monthly PMI:</label><input class="pmi" type ="text" value="0"></div>
 	<div class = "inputHolder"><label>Monthly taxes:</label><input class="taxes" type ="text" value="0"></div>
-	<div class = "inputHolder advancedInput hide"><label>Value increase percent:</label><input class="valueIncrease" type ="text" value="0"></div>
-	<div class = "inputHolder advancedInput hide"><label>Inflation percent:</label><input class="inflation" type ="text"value="0"></div>
+	<div class = "inputHolder advancedInput hide"><label>Appreciation rate:</label><input class="appreciation" type ="text" value="0"></div>
+	<div class = "inputHolder advancedInput hide"><label>Inflation rate:</label><input class="inflation" type ="text"value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Logging:</label><input class="logging" type ="checkbox"></div>
 	<button onclick = "ReCalc()">Calculate Mortgage</button>
     <div class="mortgageStats"></div>
