stop after (and refactor)

--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -20,6 +20,7 @@
 	<div class = "inputHolder"><label>Monthly taxes:</label><input class="taxes" type ="text" value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Appreciation rate:</label><input class="appreciation" type ="text" value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Inflation rate:</label><input class="inflation" type ="text"value="0"></div>
+	<div class = "inputHolder advancedInput hide"><label>Stop after (months):</label><input class="stopAfter" type ="text"value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Logging:</label><input class="logging" type ="checkbox"></div>
 	<button onclick = "ReCalc()">Calculate Mortgage</button>
     <div class="mortgageStats"></div>
