--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -8,7 +8,7 @@
     </div>
     <p class="subtext">Sadly not a supernova calculator</p>
 	<div class = "inputHolder"><label>Advanced Options<img src="../imgs/vv.gif"></label><input class="advOptions" type ="checkbox" onclick = "AdvOptionsToggle()" ></div>
-	<div class = "inputHolder"><label>Total loan amount:</label><input class="loanAmount" type ="text" value="0"></div>
+	<div class = "inputHolder"><label>Property value:</label><input class="loanAmount" type ="text" value="0"></div>
 	<div class = "inputHolder"><label>Principal balance:</label><input class="principal" type ="text" value="0"></div>
 	<div class = "inputHolder"><label>Annual interest rate:</label><input class="interestRate" type ="text" value="0"></div>
 	<div class = "inputHolder"><label>Monthly payment:</label><input class="payment" type ="text" value="0"></div>
