hide adj values

--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -24,6 +24,7 @@
 	<div class = "inputHolder advancedInput hide"><label>Rent out unit (monthly rate):</label><input class="RentRate" type ="text"value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Increase rent with inflation:</label><input class="rentInflation" type ="checkbox"></div>
 	<div class = "inputHolder advancedInput hide"><label>Increase rent with prop value:</label><input class="rentPropValue" type ="checkbox"></div>
+	<div class = "inputHolder advancedInput hide"><label>Hide adjusted values:</label><input class="hideAdj" type ="checkbox"></div>
 	<div class = "inputHolder advancedInput hide"><label>Logging:</label><input class="logging" type ="checkbox"></div>
 	<button onclick = "ReCalc()">Calculate Mortgage</button>
     <div class="mortgageStats"></div>
