hide adj by default

--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -7,7 +7,7 @@
         <h1 class="title">Mortgage Calculator</h1>
     </div>
     <p class="subtext">Sadly not a supernova calculator</p>
-	<div class = "inputHolder"><label>Advanced Options<img src="../imgs/vv.gif"></label><input class="advOptions" type ="checkbox" onclick = "AdvOptionsToggle()" ></div>
+	<div class = "inputHolder"><label>Advanced Options<img src="../imgs/vv.gif"></label><input class="advOptions" type ="checkbox" onclick = "AdvOptionsToggle()"></div>
 	<div class = "inputHolder"><label>Property value:</label><input class="loanAmount" type ="text" value="0"></div>
 	<div class = "inputHolder"><label>Principal balance:</label><input class="principal" type ="text" value="0"></div>
 	<div class = "inputHolder"><label>Annual interest rate:</label><input class="interestRate" type ="text" value="0"></div>
@@ -24,7 +24,7 @@
 	<div class = "inputHolder advancedInput hide"><label>Rent out unit (monthly rate):</label><input class="RentRate" type ="text"value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Increase rent with inflation:</label><input class="rentInflation" type ="checkbox"></div>
 	<div class = "inputHolder advancedInput hide"><label>Increase rent with prop value:</label><input class="rentPropValue" type ="checkbox"></div>
-	<div class = "inputHolder advancedInput hide"><label>Hide adjusted values:</label><input class="hideAdj" type ="checkbox"></div>
+	<div class = "inputHolder advancedInput hide"><label>Hide adjusted values:</label><input class="hideAdj" type ="checkbox" checked="true"></div>
 	<div class = "inputHolder advancedInput hide"><label>Logging:</label><input class="logging" type ="checkbox"></div>
 	<button onclick = "ReCalc()">Calculate Mortgage</button>
     <div class="mortgageStats"></div>
