--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -27,6 +27,8 @@
 	<div class = "inputHolder advancedInput hide"><label>Hide adjusted values:</label><input class="hideAdj" type ="checkbox" checked="true"></div>
 	<div class = "inputHolder advancedInput hide"><label>Logging:</label><input class="logging" type ="checkbox"></div>
 	<button onclick = "ReCalc()">Calculate Mortgage</button>
+	<button class="advancedInput hide" onclick = "CopySearch()">Share</button>
+	<textarea class="hide share"></textarea>
     <div class="mortgageStats"></div>
 </body>
 </html>
