--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -22,6 +22,7 @@
 	<div class = "inputHolder advancedInput hide"><label>Inflation rate:</label><input class="inflation" type ="text"value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Stop after (months):</label><input class="stopAfter" type ="text"value="0"></div>
 	<div class = "inputHolder advancedInput hide"><label>Rent out unit (monthly rate):</label><input class="RentRate" type ="text"value="0"></div>
+	<div class = "inputHolder advancedInput hide"><label>Increase payment with inflation:</label><input class=paymentInflation" type ="checkbox"></div>
 	<div class = "inputHolder advancedInput hide"><label>Increase rent with inflation:</label><input class="rentInflation" type ="checkbox"></div>
 	<div class = "inputHolder advancedInput hide"><label>Increase rent with prop value:</label><input class="rentPropValue" type ="checkbox"></div>
 	<div class = "inputHolder advancedInput hide"><label>Hide adjusted values:</label><input class="hideAdj" type ="checkbox" checked="true"></div>
