--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body onload="OnLoad()">
+<body onload="OnLoad()" class="bg-white">
     <link rel="stylesheet" href="Style/style.css">
     <script src="chartJs/Chart.bundle.min.js"></script>
     <script src="Javascript/calc.js"></script>
