--- a/addProject/index.html
+++ b/addProject/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body onload="InitialValues()" class="bg-white">
+<body onload="OnLoad()"  class="bg-white">
     <link rel="stylesheet" href="../Style/style.css">
     <script src="../Javascript/addProject.js"></script>
     <div>
