--- a/index.html
+++ b/index.html
@@ -119,16 +119,12 @@
           </div>
         </div>
     </div>
-
     <div><img src="https://github.com/hoveringgoat/hoveringgoat/blob/output/github-snek-dark.svg"></div>
-    </section><!-- End About Section -->
 
     <!-- ======= Stats Section ======= -->
-    <section id="stats" class="facts">
-      <div class="container">
-
+    <div class="container stats">
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>Stats</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -137,13 +133,11 @@
             <img src="https://github-readme-stats-three-mu-63.vercel.app/api/top-langs/?username=hoveringgoat&exclude_repo=FlabbyBird&hide=css&langs_count=4&theme=tokyonight" />
 
         </div>
+    </div>
 
-      </div>
-    </section><!-- End Stats Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container">
+      <div class="container skills">
 
         <div class="section-title">
           <h2>Skills</h2>
@@ -203,8 +197,8 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
 
+    </section><!-- End About Section -->
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
