--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
               Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
             </p>
           </div>
+          <center><p><img src="https://raw.githubusercontent.com/hoveringgoat/hoveringgoat/output/github-snek.svg"></p></center>
         </div>
     </div>
-    <div><img src="https://github.com/hoveringgoat/hoveringgoat/blob/output/github-snek-dark.svg"></div>
 
     <!-- ======= Stats Section ======= -->
     <div class="container stats">
