--- a/addProject/index.html
+++ b/addProject/index.html
@@ -4,7 +4,19 @@
     <link rel="stylesheet" href="../Style/style.css">
     <script src="../Javascript/addProject.js"></script>
     <div>
-        <h1 class="title">Project Pics</h1>
+        <h1 class="titlesplash">Project Pics</h1>
     </div>
+    <div class="center">
+        <div class = "inline">
+            <span>If you've already installed the app but the link didnt open the app, click here to open the app:</span>
+            <a href="#" class="button" id = "AppLink"  title="">Open App</a>
+        </div>
+    <br></br>
+    <br></br>
+    <div class = "inline">
+        <span>To open the app store page to download the app wait for the redirect or click here:</span>
+        <button  class="actualbutton" onclick="redirect();"  title="">App Store Page</button>
+    </div>
+</div>
 </body>
 </html>
