--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Hi, I'm Spencer Fisher and this is my portfolio website.
+            I'm a software engineer who has dabbled in many different areas from game development, front-end development, simulations and procedural generation!
+            I love learning new technologies and often experiment with new projects and ideas.</p>
         </div>
 
         <div class="row">
@@ -99,8 +101,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer &amp; Developer</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              I've been working as a software engineer professionally since 2016 building backends and improving legacy infrastructure!
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -112,13 +113,15 @@
             <div class="col-lg-6">
                 <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Year of Experience:</strong> <span>7</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Other Detail:</strong> <span>thing</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Seattle, Wa</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              During my software engineering career I've worked with a variety of technologies and languages, with c# and python being the ones I'm most familiar with (and enjoy working with the most!).
+              I've built a whole bunch of different projects in that time, from improving our internal scheduler to creating a new system to handle non-code data promotions.
+              Even building cross cloud functions to be able to send arbitrary data between our Azure and AWS cloud databases!
+              Delving into our legacy codebase looking for clues to uncover the origin of an obsure or intermittent bug is like second nature and I've yet to find a bug stealthy enough to evade me.
             </p>
           </div>
         </div>
@@ -129,7 +132,7 @@
     <div class="container stats">
         <div class="section-title">
           <h2>Stats</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Heres some quick stats based of my recent github account activity. Generation of these stat cards is also controlled by a repo I've created! </p>
         </div>
 
         <div class="cardwrapper">
@@ -145,7 +148,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>At a glance overview of my main programming skills!</p>
         </div>
 
         <div class="row skills-content">
@@ -166,9 +169,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">making stuff </span>
+              <span class="skill">Databases</span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -176,14 +179,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">HTML</span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS</span>
+              <span class="skill">HTML/CSS</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -193,6 +189,13 @@
               <span class="skill">JavaScript</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Architecture/Design</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -209,7 +212,9 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Hi I'm Spencer, a technically proficient software engineer seeking a full-time position working on a project that creates a real difference for its users.
+            I have a keen eye for spotting potential issues and an expert at finding out why something isn’t working as expected.
+            Worked primarily with c# for the last 7+ years with several years of experience using python and js. Let’s build some awesome new technologies together!</p>
         </div>
 
         <div class="row">
@@ -217,39 +222,59 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Spencer Fisher</h4>
-              <p><em>Innovative and smort Software Engineer with 7+ years of Professional experience designing and developing production ready code.</em></p>
+              <p><em>Software Engineer with 7+ years of Professional experience designing and developing production ready code.</em></p>
               <ul>
                 <li>Seattle, Wa</li>
                 <li>fisher.spencer@gmail.com</li>
               </ul>
             </div>
 
-            <h3 class="resume-title">Background</h3>
+            <h3 class="resume-title">Projects</h3>
             <div class="resume-item">
-              <p><em>Qui deserunt veniam.</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae./p>
+              <h6><p>Project pics</p></h6>
+              <ul>
+                <li>A cross-platform photo organization app. Backend is powered by AWS Amplify with storage in S3. Frontend is built using Flutter and dart. 
+                It's fully responsive with near instant load times for photos!
+              </li>
+            </div>
+
+            <div class="resume-item">
+              <h6><p>Godot Survivors</p></h6>
+              <ul>
+                <li>A coop survivors genre game with full multiplayer networking. Utilizing peer to peer connections and sockets.
+                  The game is fully server authoritative with clients only submitting inputs and attempting to predict actions/movements with the server updating to their final positions.
+              </li>
+            </div>
+
+            <div class="resume-item">
+              <h6><p>Planetary Simulation</p></h6>
+              <ul>
+                <li>A simple planetary simulation with n-body physics. Supports several hundred bodies with real-time physics calculation.
+                  Automatic error checking decreases step size when body forces are extremely high.
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
                 <h4>Software Engineer III</h4>
-                <h5>2021 - 2023</h5>
+                <div><h5 class="resumeItemSubtitle">BillGO</h5><h5>2018 - 2023</h5></div>
                 <p><em>Redmond, Wa </em></p>
                 <ul>
-                  <li>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. S</li>
-                  <li>it sint consectetur velit. Quisquam quos quisquam cupiditate. </li>
-                  <li>Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</li>
+                  <li>Refactored and optimized many parts of our back-end systems from our scheduling/prioritization system, to our internal APIs, to our internal tools for our other engineers.</li>
+                  <li>Designed, developed, and implemented a new service and APIs to allow sending jobs cross cloud to be processed by a new service in AWS</li>
+                  <li>Developed new service within azure cloud functions to ensure jobs were being executed in expected timeframe reducing late jobs by over 90%</li>
+                  <li>Lead team in creating design documents for projects and presented them to the wider engineering organization</li>
+                  <li>Rewrote and improved reliability and logging for the service that uploads specific biller data to our database used to query biller information.</li>
                 </ul>
             </div>
             <div class="resume-item">
-              <h4>Software Engineer II</h4>
-              <h5>2018 - 2021</h5>
+              <h4>Software Engineer I</h4>
+              <div><h5 class="resumeItemSubtitle">Prism</h5><h5>2016 - 2018</h5></div>
               <p><em>Redmond, Wa </em></p>
               <ul>
-                <li>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. S</li>
-                <li>it sint consectetur velit. Quisquam quos quisquam cupiditate. </li>
-                <li>Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</li>
+                <li>Automated web scrapers built in C# to extract billing information for customers and created payment rails to submit payments on customers behalf to biller websites.</li>
+                <li>Extended and re-wrote a significant part of our scraping engine to provide more functionality and improve the process for creating rails for payments/ebill extraction.</li>
+                <li>Reduced the amount of non-automated payments by over 30%</li>
               </ul>
             </div>
           </div>
@@ -264,9 +289,11 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate.</p>
+          <p>Here you will be able to view my publicly released projects.
+            Currently Project Pics is awaiting approval to be released on the App store. You can view an alpha build of Godot Survivors on itch.io! </p>
         </div>
-    </div>
+        <img class = "portfolioThumbnail" src="assets/img/GDSurvivors.png" height="167"></img>
+        <iframe frameborder="0" src="https://itch.io/embed/2864615?bg_color=3e3e3e&amp;fg_color=eeeeee&amp;link_color=6989ec&amp;border_color=363636" width="552" height="167"><a href="https://hoveringgoat.itch.io/godot-survivors">Godot Survivors by Hoveringgoat</a></iframe>      </div>
 
     </section><!-- End Portfolio Section -->
 
@@ -276,7 +303,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>If you're interested in getting to know me better reach out and lets chat to see if I'd be a good match for your team!</p><p>Thanks for checking out my website!</p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -286,7 +313,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Redmond, Wa</p>
+                <p>Seattle, Wa</p>
               </div>
 
               <div class="email">
